--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.8"
   },
@@ -33,6 +34,7 @@
     "@types/qs": "^6.9.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "esbuild-register": "^3.5.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
