--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@prisma/client": "^5.8.0",
     "@tanstack/react-query": "^5.17.9",
+    "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "esbuild": "^0.19.11",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.8",
     "qs": "^6.11.2",
     "react": "^18",
     "react-dom": "^18",
@@ -31,6 +33,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/qs": "^6.9.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
