--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.17.9",
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.0",
     "esbuild": "^0.19.11",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
