--- a/package.json
+++ b/package.json
@@ -12,29 +12,44 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.503.1",
+    "@aws-sdk/s3-presigned-post": "^3.503.1",
+    "@aws-sdk/s3-request-presigner": "^3.503.1",
     "@prisma/client": "^5.8.0",
     "@tanstack/react-query": "^5.17.9",
+    "aws-sdk": "^2.1547.0",
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
+    "date-fns": "^2.29.3",
     "esbuild": "^0.19.11",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^11.2.0",
+    "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-connect": "^1.0.0",
     "nodemailer": "^6.9.8",
+    "prismjs": "^1.29.0",
     "qs": "^6.11.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-quill": "^2.0.0",
     "react-slick": "^0.29.0",
+    "react-textarea-autosize": "^8.5.3",
     "react-toastify": "^9.1.3",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
+    "@types/prismjs": "^1.26.3",
     "@types/qs": "^6.9.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
