--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.521.0",
     "@prisma/client": "^5.10.2",
     "@tanstack/react-query": "^5.22.2",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.29.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18",
