--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8"
   },
