--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.29.3",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^12.0.0",
     "moment": "^2.30.1",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
@@ -28,6 +30,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
