--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.521.0",
     "@prisma/client": "^5.10.2",
     "@tanstack/react-query": "^5.22.2",
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.29.3",
     "jsonwebtoken": "^9.0.2",
@@ -20,17 +21,22 @@
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "prismjs": "^1.29.0",
+    "qs": "^6.11.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-quill": "^2.0.0",
+    "react-textarea-autosize": "^8.5.3",
     "react-toastify": "^10.0.4",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/prismjs": "^1.26.3",
+    "@types/qs": "^6.9.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
