--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.30.1",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "nodemailer": "^6.9.12",
     "prismjs": "^1.29.0",
     "qs": "^6.11.2",
     "react": "^18",
@@ -43,6 +44,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/prismjs": "^1.26.3",
     "@types/qs": "^6.9.11",
     "@types/react": "^18",
